2009-07-09  Omair Majid  <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/cache/ResourceTracker.java:
	(downloadResource): Accept and download content with pack200 or gzip
	compression and uncompress it on the fly.
	(initializeResource): Accept content with pack200 or gzip compression.
	(getVersionedResourceURL): Add javadoc.

2009-07-09  Deepak Bhole  <dbhole@redhat.com>

	* IcedTeaPlugin.cc: Add support for cookie info requests from applets.
	* plugin/icedtea/sun/applet/PluginAppletViewer.java: Rework cookie support
	to make it dynamic.
	* plugin/icedtea/sun/applet/PluginMain.java: Wire in custom cookie store
	that dynamically requests cookie information from C++ side.
	* netx/net/sourceforge/jnlp/JNLPFile.java: Remove old cookie handling code.
	* netx/net/sourceforge/jnlp/Launcher.java: Same.
	* netx/net/sourceforge/jnlp/NetxPanel.java: Same.
	* netx/net/sourceforge/jnlp/PluginBridge.java: Same.
	* netx/net/sourceforge/jnlp/cache/CacheUtil.java: Same.
	* netx/net/sourceforge/jnlp/cache/Resource.java: Same.
	* netx/net/sourceforge/jnlp/cache/ResourceTracker.java: Same.
	* netx/net/sourceforge/jnlp/runtime/JNLPClassLoader.java: Same.

2009-07-07  Omair Majid  <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/Parser.java
	(getExtension): Fix typo in node name.

2009-07-07  Omair Majid  <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/resources/Messages.properties: Add
	RNestedJarExtration.
	* netx/net/sourceforge/jnlp/runtime/JNLPClassLoader.java
	(activateJar): Create parent directories for nested jars.

2009-06-24  Omair Majid  <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/security/CertWarningPane.java
	(installComponents): Call SecurityUtil.getCN instead of getCN.
	(getCN): Removed.
	* netx/net/sourceforge/jnlp/security/CertsInfoPane.java
	(buildTree): Call SecurityUtil.getCN instead of getCN.
	(populateTable): Likewise.
	(getCN): Removed.
	* netx/net/sourceforge/jnlp/security/SecurityUtil.java
	(getCN): Follow RFC 2253 partially and understand escaping.